# it490-midterm

./: .gitignore  api_data.py  docker-compose.yml
backend/: README.md  app.py  broker.py  db.py  email_facade.py  env.py  pyproject.toml
backend-api/: TMDB.py  app.py  broker.py  pyproject.toml  test.php
backend-db/: app.py  broker.py  db.py  docker-compose.yml  email.py  email_facade.py  env.py  example_code.py  pyproject.toml  setup_db.sql  test.py
deploy-client/: broker.py  broker_upd.py  config.py  main.py  pyproject.toml
deploy-listener/: broker.py  example.py  receive.py  send.py  system.py
deploy-server/: broker.py  main.py  pyproject.toml  sftp.py
dmz/: README.md  app.py  broker.py  pyproject.toml  youtube.py
dockerComposeProd/: docker-compose.yml
failOverFiles/: corosyncBEOne.conf  corosyncBETwo.conf  corosyncDMZOne.conf  corosyncDMZTwo  corosyncDMZTwo.conf  corosyncFEOne  corosyncFEOne.conf  corosyncFETwo.conf  crmConfigFEOne.txt  crmConfigureBETwo  crmConfigureDMZTwo  pcmkBEOne  pcmkDMZTwo
frontend/: Login.html  README.md  RabbitClient.php  Registration.php  composer.json  get_host_info.inc  index.html  login.php  rabbitclient.php  registration.html  registration.php
frontend/public/: create-watch-party.php  edit-profile.php  favorites.php  home.php  index.php  login.php  logout.php  movie.php  my-profile.php  profile.php  registration.php  search-movies.php  searchmovies.php  watch-party.php
frontend/public/protected/: RabbitClient.php  Utils.php  footer.php  header.php
