[tool.poetry]
name = "deploy-server"
version = "0.1.0"
description = ""
authors = ["Swapnil62 <sp2428@njit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
