[tool.poetry]
name = "it490-dmz"
version = "0.1.0"
description = ""
authors = ["Swapnil62 <sp2428@njit.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.20.0"
tmdbsimple = "^2.8.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
isort = "^5.10.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
